closing #16 - add redirect to ProjectUpdateController